@@ -88,7 +88,8 @@ Version 1.7.0-svn:
    * Implemented FR #13321: added "unit advances=N" command to debug console
      to immediately level-up selected unit N times
  * WML Engine:
-   * Added [show_objectives] tag (part of bug #13042)
+   * Added [show_objectives] tag and allowed [show_if] tag in [objective]
+     tags. (bug #13042)
    * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
    * [switch] and [case]/[else] can be used to wrap story [part]s in [story]
      now (bug #13170)
